# cubey

./: .env.example  .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs  utils.rs
src/commands/: skyblock.rs
src/commands/skyblock/: get_player_uuid.rs
src/utils/: logger.rs
src/utils/minecraft/: get_player_uuid.rs
